--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,6 @@
   </head>
   <body>
     <div class="root"></div>
-    <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   </body>
 </html>
